Some fixes for my system (OpenSUSE)
- fix kwin script (Overview -> Expose)
- rename qdbus -> qdbus-qt5

--- a/touchegg.conf
+++ b/touchegg.conf
@@ -43,7 +43,7 @@
     <gesture type="SWIPE" fingers="3" direction="UP">   
         <action type="RUN_COMMAND">
             <repeat>false</repeat>
-            <command>qdbus org.kde.kglobalaccel /component/kwin invokeShortcut 'Overview'</command>
+            <command>qdbus-qt5 org.kde.kglobalaccel /component/kwin invokeShortcut 'Expose'</command>
             <on>begin</on>
         </action>
     </gesture>
@@ -77,7 +77,7 @@
     <gesture type="PINCH" fingers="3" direction="IN">
       <action type="RUN_COMMAND">
         <repeat>false</repeat>
-        <command>qdbus org.kde.kglobalaccel /component/kwin invokeShortcut 'ShowDesktopGrid'</command>
+        <command>qdbus-qt5 org.kde.kglobalaccel /component/kwin invokeShortcut 'ShowDesktopGrid'</command>
         <on>begin</on>
       </action>
     </gesture>
@@ -85,7 +85,7 @@
     <gesture type="PINCH" fingers="3" direction="OUT">
       <action type="RUN_COMMAND">
         <repeat>false</repeat>
-        <command>qdbus org.kde.kglobalaccel /component/kwin invokeShortcut 'ShowDesktopGrid'</command>
+        <command>qdbus-qt5 org.kde.kglobalaccel /component/kwin invokeShortcut 'ShowDesktopGrid'</command>
         <on>begin</on>
       </action>
     </gesture>
@@ -93,8 +93,8 @@
     <gesture type="SWIPE" fingers="4" direction="UP">
       <action type="RUN_COMMAND">
         <repeat>true</repeat>
-        <command>qdbus org.kde.kglobalaccel /component/kmix invokeShortcut 'increase_volume'</command>
-        <decreaseCommand>qdbus org.kde.kglobalaccel /component/kmix invokeShortcut 'decrease_volume'</decreaseCommand>
+        <command>qdbus-qt5 org.kde.kglobalaccel /component/kmix invokeShortcut 'increase_volume'</command>
+        <decreaseCommand>qdbus-qt5 org.kde.kglobalaccel /component/kmix invokeShortcut 'decrease_volume'</decreaseCommand>
         <on>begin</on>
       </action>
     </gesture>
@@ -102,8 +102,8 @@
     <gesture type="SWIPE" fingers="4" direction="DOWN">
      <action type="RUN_COMMAND">
         <repeat>true</repeat>
-        <command>qdbus org.kde.kglobalaccel /component/kmix invokeShortcut 'decrease_volume'</command>
-        <decreaseCommand>qdbus org.kde.kglobalaccel /component/kmix invokeShortcut 'increase_volume'</decreaseCommand>
+        <command>qdbus-qt5 org.kde.kglobalaccel /component/kmix invokeShortcut 'decrease_volume'</command>
+        <decreaseCommand>qdbus-qt5 org.kde.kglobalaccel /component/kmix invokeShortcut 'increase_volume'</decreaseCommand>
         <on>begin</on>
       </action>
     </gesture>
